@@ -7,6 +7,7 @@ Cacti CHANGELOG
 -bug#0000903: snmpgetnext function does not exist in PHP less than 5.0 
 -bug#0000906: Every Tenth Host Does Not Show on Tree During Console Edit 
 -bug@0000921: cactid and ping.pl script error
+-bug#0000927: Classic export does not recognize thumbnail columns properly
 -bug: ss_sql.php was never tested and causes the script server to crash.
 -bug: In an effort to make the current version of Cacti supportable, add Timeshifter.  Thanks Gandolf!
 
